# qt-student

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qt-student.pro  res.qrc
components/add-student/: addStudent.cpp  addStudent.h  addStudent.ui  ui_addStudent.h
utils/: studentSql.cpp  studentSql.h
views/login/: Login.cpp  Login.h  Login.ui  ui_Login.h
views/main/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ui_MainWindow.h
